<resources>
    <string name="app_name">AppProyectoCalculadora</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_div">/</string>
    <string name="btn_borrar"><![CDATA[<-]]></string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_mult">X</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_rest">-</string>
    <string name="btn_0">0</string>
    <string name="btn_coma">,</string>
    <string name="btn_suma">+</string>
    <string name="btn_result">=</string>
    <string name="tv2" />
    <string name="tv1"/>
    <string name="btn_c">C</string>
    <string name="btn_cambiarsigno">+/-</string>
    <string name="btn_porcentaje">%</string>
</resources>
