<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:background="#1F1D1D"
    android:gravity="bottom"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_cuenta"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:paddingHorizontal="10dp"
        android:text="@string/tv1"
        android:textAlignment="textEnd"
        android:textColor="#FFFFFF"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/tv_parcial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:text="@string/tv2"
        android:textAlignment="textEnd"
        android:textColor="#FFFFFF"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="3">

        <TableLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:weightSum="2">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn7"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:onClick="n7"
                    android:text="@string/btn_7"
                    android:textSize="36sp" />

                <Button
                    android:id="@+id/btn8"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:onClick="n8"
                    android:text="@string/btn_8"
                    android:textSize="36sp" />

                <Button
                    android:id="@+id/btn9"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:onClick="n9"
                    android:text="@string/btn_9"
                    android:textSize="36sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn4"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:onClick="n4"
                    android:text="@string/btn_4"
                    android:textSize="36sp" />

                <Button
                    android:id="@+id/btn5"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:onClick="n5"
                    android:text="@string/btn_5"
                    android:textSize="36sp" />

                <Button
                    android:id="@+id/btn6"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:onClick="n6"
                    android:text="@string/btn_6"
                    android:textSize="36sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn1"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:onClick="n1"
                    android:text="@string/btn_1"
                    android:textSize="36sp" />

                <Button
                    android:id="@+id/btn2"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:onClick="n2"
                    android:text="@string/btn_2"
                    android:textSize="36sp" />

                <Button
                    android:id="@+id/btn3"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:onClick="n3"
                    android:text="@string/btn_3"
                    android:textSize="36sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0">

                <Button
                    android:id="@+id/btn0"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:onClick="n0"
                    android:text="@string/btn_0"
                    android:textSize="36sp" />

                <Button
                    android:id="@+id/btn_coma"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:onClick="coma"
                    android:text="@string/btn_coma"
                    android:textSize="36sp" />

                <Button
                    android:id="@+id/btn_igual"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:onClick="igual"
                    android:text="@string/btn_result"
                    android:textSize="36sp" />

            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end"
                android:weightSum="2">

                <Button
                    android:id="@+id/btn_div"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="0"
                    android:onClick="div"
                    android:text="@string/btn_div"
                    android:textSize="36sp" />

                <Button
                    android:id="@+id/btn_retroceso"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:background="@drawable/icono_retroceso_calculadora_miniatura"
                    android:onClick="retroceder"
                    android:textSize="36sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start">

                <Button
                    android:id="@+id/btn_mult"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="0"
                    android:onClick="mult"
                    android:text="@string/btn_mult"
                    android:textSize="36sp" />

                <Button
                    android:id="@+id/btn_vaciar"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="0"
                    android:onClick="vaciar"
                    android:text="@string/btn_c"
                    android:textSize="36sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start">

                <Button
                    android:id="@+id/btn_rest"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="0"
                    android:onClick="resta"
                    android:text="@string/btn_rest"
                    android:textSize="36sp" />

                <Button
                    android:id="@+id/btn_cambiosig"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="0"
                    android:onClick="cambioSigno"
                    android:text="@string/btn_cambiarsigno"
                    android:textSize="36sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="end">

                <Button
                    android:id="@+id/btn_suma"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="0"
                    android:onClick="suma"
                    android:text="@string/btn_suma"
                    android:textSize="36sp" />

                <Button
                    android:id="@+id/btn_porcentaje"
                    style="?attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:layout_weight="0"
                    android:onClick="porcentaje"
                    android:text="@string/btn_porcentaje"
                    android:textSize="36sp" />

            </TableRow>
        </TableLayout>

    </LinearLayout>

</LinearLayout>